--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     android:id="@+id/main_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     tools:context="com.nopeia.viewpager.myviewpage.MainActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -28,11 +27,12 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="16dp"
             android:text="@string/view_pager_next_button"
             android:textColor="@android:color/white"
             android:translationZ="2dp"
-            app:layout_constraintBottom_toBottomOf="@+id/view_page_dots_linear_layout"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/view_page_dots_linear_layout" />
 
@@ -54,17 +54,17 @@
             android:id="@+id/view_page_dots_linear_layout"
             android:layout_width="0dp"
             android:layout_height="30dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:gravity="center"
             android:orientation="horizontal"
             android:translationZ="2dp"
             android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/view_pager_previous_button"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/view_pager_next_button"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/view_pager_previous_button"
-            app:layout_constraintTop_toTopOf="@+id/view_pager_previous_button">
+            app:layout_constraintStart_toEndOf="@+id/view_pager_previous_button">
 
         </LinearLayout>
 
